[gd_scene load_steps=12 format=3 uid="uid://pcb71pjtatty"]

[ext_resource type="Script" uid="uid://dmvlfcyq4l7g1" path="res://levels/Class Selection/class_selection.gd" id="1_g06vg"]
[ext_resource type="PackedScene" uid="uid://dbowfwd7ix33p" path="res://assets/Cursor/cursor.tscn" id="2_gypj8"]
[ext_resource type="Texture2D" uid="uid://btd2v25in45dy" path="res://assets/Cursor/Cursor icons-red and white.png" id="3_qh1a7"]
[ext_resource type="Texture2D" uid="uid://brqhog6s6paks" path="res://assets/UI/1TALLGRASSfinalcharselect.png" id="4_srpr0"]
[ext_resource type="Texture2D" uid="uid://dkqw1isth1pcb" path="res://assets/UI/Amanita Brown Cap Character Select.png" id="5_srpr0"]
[ext_resource type="Texture2D" uid="uid://dbflkyp1yrawk" path="res://assets/UI/Puffball Character Select.png" id="6_srpr0"]
[ext_resource type="AudioStream" uid="uid://b8vjc6o0gqfqd" path="res://assets/Sound/title_music_BugS.mp3" id="7_a3h8t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gypj8"]
size = Vector2(330, 79.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qh1a7"]
size = Vector2(157, 56)

[sub_resource type="ImageTexture" id="ImageTexture_a3h8t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3k6t4"]
size = Vector2(454.75, 145)

[node name="ClassSelection" type="Control"]
y_sort_enabled = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g06vg")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2

[node name="Amanita" type="Button" parent="CanvasLayer2" groups=["button"]]
z_index = 2
y_sort_enabled = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -56.0
offset_right = 203.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
flat = true

[node name="Area2D" type="Area2D" parent="CanvasLayer2/Amanita" groups=["button"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/Amanita/Area2D"]
position = Vector2(164, 39.875)
shape = SubResource("RectangleShape2D_gypj8")

[node name="Puffball" type="Button" parent="CanvasLayer2" groups=["button"]]
z_index = 2
y_sort_enabled = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 49.0
offset_right = 203.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
flat = true

[node name="Area2D" type="Area2D" parent="CanvasLayer2/Puffball" groups=["button"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/Puffball/Area2D"]
position = Vector2(163, 40.5625)
shape = SubResource("RectangleShape2D_gypj8")

[node name="Inkcap" type="Button" parent="CanvasLayer2" groups=["button"]]
z_index = 2
y_sort_enabled = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 155.0
offset_right = 204.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "
"
flat = true

[node name="Area2D" type="Area2D" parent="CanvasLayer2/Inkcap" groups=["button"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/Inkcap/Area2D"]
position = Vector2(165, 40)
shape = SubResource("RectangleShape2D_gypj8")

[node name="Cursor" parent="CanvasLayer2" instance=ExtResource("2_gypj8")]
z_index = 2

[node name="Cursor2" parent="CanvasLayer2" instance=ExtResource("2_gypj8")]
z_index = 2
cursor_id = 2
texture = ExtResource("3_qh1a7")

[node name="BackButton" type="Button" parent="CanvasLayer2" groups=["button"]]
offset_left = 39.0
offset_top = 25.0
offset_right = 195.0
offset_bottom = 82.0
action_mode = 0
text = "back
"
flat = true

[node name="Area2D" type="Area2D" parent="CanvasLayer2/BackButton" groups=["button"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/BackButton/Area2D"]
position = Vector2(78.5, 28)
shape = SubResource("RectangleShape2D_qh1a7")

[node name="StartButton" type="Button" parent="CanvasLayer2" groups=["button"]]
z_index = 4
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -183.0
offset_right = 266.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 27
icon = SubResource("ImageTexture_a3h8t")
flat = true

[node name="Area2D" type="Area2D" parent="CanvasLayer2/StartButton" groups=["button"]]
position = Vector2(38, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/StartButton/Area2D"]
position = Vector2(190.375, 63.5)
shape = SubResource("RectangleShape2D_3k6t4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_srpr0")
expand_mode = 1
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="player1Icon" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.199
anchor_top = 0.652
anchor_right = 0.199
anchor_bottom = 0.652
offset_left = -161.08
offset_top = -172.16
offset_right = 150.92
offset_bottom = 138.84
texture = ExtResource("5_srpr0")
expand_mode = 1

[node name="player2Icon" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.794
anchor_top = 0.633
anchor_right = 0.794
anchor_bottom = 0.633
offset_left = -155.48
offset_top = -155.64
offset_right = 156.52
offset_bottom = 155.36
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_srpr0")
expand_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_a3h8t")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="CanvasLayer2/Amanita" to="." method="_on_amanita_pressed"]
[connection signal="pressed" from="CanvasLayer2/Puffball" to="." method="_on_puffball_pressed"]
[connection signal="pressed" from="CanvasLayer2/Inkcap" to="." method="_on_inkcap_pressed"]
[connection signal="pressed" from="CanvasLayer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/StartButton" to="." method="_on_start_button_pressed"]
